# xray

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml  trello-project.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/designs/: 001-modular-architecture.md  002-toolbar-npm-project.md  003-panel-system.md  004-color-palette-panel-iteration-notes.md  004-color-palette-panel.md  005-multi-panel-architecture.md
src/xray/: __init__.py  browser.py  context.py  server.py
src/xray/handlers/: __init__.py  base.py  browser.py  capture.py  interaction.py  navigation.py  palette.py  selection.py
src/xray/templates/: __init__.py  palette_report.html
src/xray/toolbar/: __init__.py  manager.py
src/xray/webtools_dist/: __init__.py
webtools/: build.mjs  eslint.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json
webtools/assets/: selection.js  styles.css
webtools/src/: index.ts  types.ts  xray.test.ts  xray.ts
webtools/src/palette/: color-picker.ts  color-utils.ts  controller.ts  index.ts  panel.ts  types.ts
webtools/src/state/: index.ts  store.test.ts  store.ts
webtools/src/tools/: controller.ts  index.ts  panel.ts  selection-manager.ts  snapshot-manager.ts  svg-manager.ts  types.ts
webtools/src/ui/: icons.ts  index.ts  panel.ts  tab-dock.ts
webtools/src/visualizer/: index.ts  types.ts  visualizer.ts
webtools/src/visualizer/slides/: analysis.ts  color-utils.ts  dataviz.ts  fractals.ts  (+5 more)
webtools/styles/: annotations.css  canvas.css  index.css  palette.css  panel.css  selection.css  svg.css  toolbar.css
