[project]
name = "xray-mcp"
version = "0.1.0"
description = "Browser automation MCP server — control browsers from AI agents via Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Esteban Dorador", email = "me@estebandorador.dev" },
]
keywords = ["mcp", "browser", "automation", "playwright", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "mcp>=1.25.0",
    "playwright>=1.57.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/e7nd7r/xray"
Repository = "https://github.com/e7nd7r/xray"
Issues = "https://github.com/e7nd7r/xray/issues"

[project.scripts]
xray = "xray.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xray"]

# Build hook to compile webtools before building the wheel
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
